--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Fritflix Feedback">
 <script>
-const VERSION = 'v1.3.4';
+const VERSION = 'v1.3.5';
 
 window.addEventListener('DOMContentLoaded', () => {
   if ('serviceWorker' in navigator) {
@@ -942,7 +942,7 @@ window.addEventListener('DOMContentLoaded', () => {
 }
 
 // === PUSH CONFIG ===
-const VAPID_PUBLIC_KEY = "DEIN_VAPID_PUBLIC_KEY_HIER"; // aus .env / Backend
+const VAPID_PUBLIC_KEY = "BBpyaui5X3zV01eaVjY3lwRZReD9VoNo7gR4fqrkZ--DckIA7bxfbcwjrAxPTYZQZ9Jf5zu7uyUPJyADedKL1QQ";
 const PUSH_STATUS_EL = () => document.getElementById('push-status');
 
 function urlBase64ToUint8Array(base64String) {
